# Software-technologies-labs

extra-project/: CMakeLists.txt  main.cpp
lab1-slide-11/: CMakeLists.txt  main.cpp
lab1-slide17/: CMakeLists.txt  main.cpp
lab1_slide13/: CMakeLists.txt  main.cpp
lab2-slide13/: CMakeLists.txt  main.cpp
lab2-slide9/: CMakeLists.txt  main.cpp
lab2_slide12/: CMakeLists.txt  main.cpp
lab3-17/: main.cpp
lab3-slide25/: CMakeLists.txt  main.cpp
lab4-slide11/: CMakeLists.txt  main.cpp
lab4-slide13/: CMakeLists.txt  main.cpp
lab4-slide15/: CMakeLists.txt  main.cpp
lab4-slide19/: CMakeLists.txt  main.cpp
lab4-slide20/: CMakeLists.txt  main.cpp
lab4-slide9/: CMakeLists.txt  main.cpp
lab5-slide16/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
lab5-slide17/: CMakeLists.txt
lab5-slide17/lab5-slide17/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  main.cpp
lab6-slide10/: CMakeLists.txt  main.cpp
lab6-slide6/: CMakeLists.txt  main.cpp
lab6-slide8/: CMakeLists.txt  main.cpp
lab7-slide18/: CMakeLists.txt  main.cpp
lab8-slide14/: CMakeLists.txt  main.cpp
lab8-slide15/: CMakeLists.txt  main.cpp
lab8-slide16/: CMakeLists.txt  main.cpp
